fixed h1 positioning in mainpages banners

--- a/src/_includes/mainpage.njk
+++ b/src/_includes/mainpage.njk
@@ -2,7 +2,9 @@
 
 {% block pagecontent %}
 <div class="banner">
-  <h1>{{title}}</h1>
+  <div class="banner-inner">
+    <h1>{{title}}</h1>
+  </div>
 </div>
 <main>
   {{content | safe}}
