--- a/src/_includes/vacancies.njk
+++ b/src/_includes/vacancies.njk
@@ -7,7 +7,7 @@
   {%if vacancies.length > 0%}
     <p>If you are interested in joinng our staff team, we are committed to safeguarding and encourage you to read our Child Protection and Safeguarding Policy before applying for any posts at Decoy Primary School.</p>
     {%for vacancy in vacancies %}
-      <h2>{{vacancy.title}}</h2>
+      <h2>{{vacancy.heading}}</h2>
       <p>{{vacancy.text}}</p>
       <div class="content-grid">
       {% for document in vacancy.documents %}<a href="{{document.path}}">{{document.name}}</a>{% endfor %}
