added markdown parsing to governors' bios

--- a/src/_includes/meet-the-governors.njk
+++ b/src/_includes/meet-the-governors.njk
@@ -10,7 +10,7 @@
     <div class="clearfix">
       <h3>{{person.title}}</h3>
       {% if person.picture %}<img src="{{person.picture}}" alt="{{person.title}}">{% endif %}
-      <p>{{person.bio}}
+      {{person.bio}}
     </div>
   {% endfor %}
   </div>
