--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -632,6 +632,53 @@ input#query:focus {
 
 /* --------------------- */
 /* home page styles */
+
+/* banner text  */
+
+#banner-text-container{
+  color: white; 
+  background-color: red; 
+  text-align:center; 
+  white-space: nowrap;
+  font-size: 2em; 
+  overflow: hidden;
+  padding: 0.6em 0 0.4em 0;
+  position: relative;
+}
+
+p#banner-text{
+  /* width: 100%; */
+  margin: 0;
+  -moz-transform:translateX(100%);
+  -webkit-transform:translateX(100%); 
+  transform:translateX(100%);
+  -moz-animation: scroll-left 10s linear infinite;
+  -webkit-animation: scroll-left 10s linear infinite;
+  animation: scroll-left 10s linear infinite;  
+}
+
+@-moz-keyframes scroll-left {
+  0% { -moz-transform: translateX(100%); }
+  100% { -moz-transform: translateX(-100%); }
+}
+  @-webkit-keyframes scroll-left {
+  0% { -webkit-transform: translateX(100%); }
+  100% { -webkit-transform: translateX(-100%); }
+}
+  @keyframes scroll-left {
+  0% { 
+  -moz-transform: translateX(100%); /* Browser bug fix */
+  -webkit-transform: translateX(100%); /* Browser bug fix */
+  transform: translateX(100%); 
+  }
+  100% { 
+  -moz-transform: translateX(-100%); /* Browser bug fix */
+  -webkit-transform: translateX(-100%); /* Browser bug fix */
+  transform: translateX(-100%); 
+  }
+}
+
+
 /* home page banner */
 #home-page-banner {
   /* in case image fails to load */
